<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/Welcometxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="62dp"
        android:contentDescription="@string/welcome_login"
        android:text="@string/welcome_login"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="287dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcometxt">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/RegNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/name_reg"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/HintColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/RegEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/HintColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/RegPswText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/psw_login"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/HintColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/RegConfPswText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/psw_reg"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/HintColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/RegAddressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/address_reg"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/HintColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/RegPhoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phone_reg"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/HintColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/codeVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/verify_reg"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/HintColor"
                    android:textSize="20sp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/RegRegBtn"
        android:layout_width="130dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/reg_login"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/RegProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@android:color/holo_red_light"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Welcometxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />
</android.support.constraint.ConstraintLayout>