<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" ></android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/homeBTN"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:background="@color/btnBack"
        android:text="@string/homebtn"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
        android:layout_marginLeft="72dp" />

    <Button
        android:id="@+id/inboxBTN"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/btnBack"
        android:text="@string/inboxbtn"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeBTN"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
        android:layout_marginRight="72dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/userBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@color/btnBack"
        android:text="@string/users"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>